// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="text-input"
    placeholder="Placeholder"
  />
</div>
`;

exports[`<TextInput /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="text-input"
    disabled=""
    style="margin-bottom: 0.5rem;"
    value="Default Value"
  />
  <input
    class="text-input"
    disabled=""
    placeholder="Placeholder"
  />
</div>
`;

exports[`<TextInput /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="text-input error"
    style="margin-bottom: 0.5rem;"
  />
  <input
    class="text-input error"
    placeholder="Placeholder"
  />
</div>
`;
